# Linux

./: README.md  init.sh
Markdown/: demo2.md  demo3.md
brew/: README.md
certbot/: certbot.md
cmake-demos/: cmake.sh
cmake-demos/my-demo/exam1/: CMakeLists.txt
cmake-demos/my-demo/exam1/src/: main.cpp
cmake-demos/my-demo/exam3/: CMakeLists.txt
commands/: curl.md  dd.md  disk.md  history.md  linux_tools.md  netstat.md  network.md  raid.md  rsync.md  screen.md  sed.md  ss.md  ssh.md  system_info.md  网卡流量查看.md  网络排查工具.md
git/: cherry_pick.md  describe.md  git.md  git_flow.md  git_fork.md  git_tag.md  gitattributes.md  hook.md  merge.md  rebase.md  reset.md  revert.md
install/docker/: docker.md
install/iterm2/: README.md
jmeter/: README.md
kubernetes/: README.md
kubernetes/hellonode/: README.md  test.sh
kubernetes/kubeadmDeploy/: README.md  autoPullImages.sh  deploy.sh
kubernetes/minikubeDeploy/: README.md  dockerInstall.sh  minikubeDeploy.sh
linuxContainer/: main-0-template.c
linux_program_design/chapter3/: copy_stdio.c  copy_system.c  copy_system1.c  gcc.sh  init.sh  printdir.c  simple_read.c  simple_write.c
makefile-demos/: docs.md
nginx/: conf.md  conf_1.md  install.md
openssl/: README.md
regex/: regex.md
service/: README.md  demo.service  myservice.service  myservice.sh  svc-test.py
shell/201804/: alph.txt  char_equal  city.txt  delete  exit_msg  hello  if_1  if_2  if_3  (+9 more)
ssh/: README.md  scp.md  ssh.md  ssh_client.md  ssh_key_login.md  ssh_log.md  ssh_server.md
supervisor/: supervisor.md
test/: bad1.c  test
zsh/: zsh.md
(+269 files in other folders)
